--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -20,5 +20,6 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["vite.config.ts"]
+  "include": ["vite.config.ts", "src/**/*", "server/**/*"], 
+  "exclude": ["node_modules", "dist"]  
 }
