--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
+    "jsx": "react-jsx",  
     "target": "ES2022",
     "lib": ["ES2023"],
     "module": "ESNext",
@@ -20,6 +20,6 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["vite.config.ts", "src/**/*", "server/**/*"], 
-  "exclude": ["node_modules", "dist"]  
+  "include": ["vite.config.ts", "src/**/*", "server/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
