--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -5,21 +5,17 @@
     "lib": ["ES2023"],
     "module": "ESNext",
     "skipLibCheck": true,
-
-    /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
-
-    /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["vite.config.ts", "src/**/*", "server/**/*", "**/*.ts", "**/*.tsx", "index.tsx"],  
-  "exclude": ["node_modules", "dist"]
+  "include": ["vite.config.ts"],
+  "exclude": []
 }
