--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -16,6 +16,6 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["vite.config.ts"],
-  "exclude": []
+  "include": ["../vite.config.ts"]
+,  "exclude": []
 }
